@@ -1,3 +1,8 @@
+2014-01-23  Marek Polacek  <polacek@redhat.com>
+
+	PR c/59871
+	* decNumberLocal.h (UBFROMUS, UBFROMUI): Remove last argument.
+
 2014-01-02  Richard Sandiford  <rdsandiford@googlemail.com>
 
 	Update copyright years
